Implemented the forgotPassword functionality in Auth.mjs

--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "semver": "^7.3.8",
     "tough-cookie": "^4.0.0",
     "@azure/msal-node": "^2.16.2"
+  },
+  "dependencies": {
+    "nodemailer": "^6.9.16"
   }
 }
